--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.475.0",
+        "next-themes": "^0.4.4",
         "react-hook-form": "^7.54.2",
+        "sonner": "^1.7.4",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.1"
