--- a/package.json
+++ b/package.json
@@ -32,13 +32,18 @@
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@tanstack/react-query": "^5.66.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
+        "dayjs": "^1.11.13",
         "lucide-react": "^0.475.0",
         "next-themes": "^0.4.4",
+        "react-day-picker": "^8.10.1",
         "react-hook-form": "^7.54.2",
         "sonner": "^1.7.4",
         "tailwind-merge": "^3.0.1",
