--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@tanstack/react-query": "^5.66.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.0.0",
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.13",
         "lucide-react": "^0.475.0",
